# multicurrency-money

./: .gitignore  .gitmodules  README.md
tdd/: CMakeLists.txt
tdd/tests/: CMakeLists.txt  bank.cpp  bank.h  expression.h  main.cpp  money.cpp  money.h  sum.cpp  sum.h
